--- a/my/src/components/styles/Navigation.css
+++ b/my/src/components/styles/Navigation.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: flex-start;
     color: black;
+    background-color:black;
   }
 
   .nav-wrapper {
@@ -9,7 +10,7 @@
     justify-content: space-between;
     width: 100%;
     padding: 0 20px;
-    background-color: #282c34;
+    background-color:black;
   }
 
   #about-side {
